--- a/package.json
+++ b/package.json
@@ -4,38 +4,42 @@
     "description": "Nebuchadnezzar Builder Tests (NeBu)",
     "main": "index.js",
     "scripts": {
-        "build": "webpack --mode production",
-        "start": "webpack serve --open --content-base src --hot --inline"
+        "build": "webpack --mode production --config webpack.config.production.js",
+        "start": "webpack serve --config webpack.config.development.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@babylonjs/inspector": "^4.2.0",
-        "@types/es6-shim": "^0.31.41",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^7.0.0",
-        "css-loader": "^5.1.0",
-        "html-webpack-plugin": "^5.2.0",
-        "imports-loader": "^2.0.0",
-        "style-loader": "^2.0.0",
-        "ts-loader": "^8.0.17",
-        "typescript": "^4.2.2",
-        "webpack": "^5.24.2",
-        "webpack-cli": "^4.5.0",
-        "webpack-dev-server": "^3.11.2"
+        "@babylonjs/inspector": "^5.57.0",
+        "@types/es6-shim": "^0.31.42",
+        "clean-webpack-plugin": "^4.0.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.7.3",
+        "html-webpack-plugin": "^5.5.1",
+        "imports-loader": "^4.0.1",
+        "style-loader": "^3.3.2",
+        "ts-loader": "^9.4.2",
+        "typescript": "^5.0.4",
+        "webpack": "^5.79.0",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.13.3"
     },
     "dependencies": {
-        "@babylonjs/core": "^4.2.0",
-        "@babylonjs/gui": "^4.2.0",
-        "@babylonjs/loaders": "^4.2.0",
-        "@babylonjs/materials": "^4.2.0",
+        "@babylonjs/core": "^5.57.0",
+        "@babylonjs/gui": "^5.57.0",
+        "@babylonjs/gui-editor": "^5.57.0",
+        "@babylonjs/loaders": "^5.57.0",
+        "@babylonjs/materials": "^5.57.0",
+        "@babylonjs/serializers": "^5.57.0",
         "ammo.js": "github:kripken/ammo.js",
         "cannon": "^0.6.2",
-        "earcut": "^2.2.2",
+        "earcut": "^2.2.4",
         "lodash": "^4.17.21",
-        "nodemon": "^2.0.7",
+        "nodemon": "^2.0.22",
         "oimo": "^1.0.9",
-        "rxjs": "^6.6.6"
+        "rxjs": "^7.8.0",
+        "source-map-loader": "^4.0.1",
+        "webpack-merge": "^5.8.0"
     }
 }
